# neuro-gen

./: .dockerignor  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  convert_base_to_byte.py  db.py  docker-compose.yaml  generate.py  images.db  main.py  models.py  pyproject.toml  repository.py  router.py  schemas.py  settings.py
V1_api/: V1_repository.py  v1_router.py
V2_api/: V2_repository.py  V2_schemas.py  v2_router.py
infra/: .env.example  docker-compose.yaml
migrations/: env.py
migrations/versions/: 0835c3b16e90_unique_title.py  c41170595e4c_v2.py  cb9c121ea3dd_rm_optional.py  d05d5b7d204e_1st.py
