[tool.poetry]
name = "neuro-gen"
version = "0.1.0"
description = ""
authors = ["Nikita Titarenko <ntv.cnd@gmail.com>"]
readme = "README.md"
packages = [{include = "neuro_gen"}]

[tool.poetry.dependencies]
python = "3.10.7"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
