[tool.poetry]
name = "neuro-gen"
version = "0.1.0"
description = ""
authors = ["Nikita Titarenko <ntv.cnd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.0"}
sqlalchemy = "^2.0.27"
aiosqlite = "^0.20.0"
requests = "^2.31.0"
transliterate = "^1.10.2"
opencv-python = "^4.9.0.80"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
